# lsp-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  architecture.md  language-support.md
fixtures/sample/: user_service.py  widgets.ts
skills/lsp-code-analysis/: SKILL.md
src/: bm25.rs  commands.rs  config.rs  daemon.rs  format.rs  install.rs  locate.rs  lsp_client.rs  main.rs  manager_client.rs  mcp.rs  project.rs  protocol.rs  registry.rs  schema.rs  watcher.rs
tests/: bash_lang.rs  calls.rs  cpp_lang.rs  csharp_lang.rs  definition.rs  diagnostics.rs  doc.rs  go_lang.rs  help.rs  install.rs  java_kotlin.rs  locate.rs  lua_lang.rs  mcp_stdio.rs  outline.rs  python.rs  reference.rs  ruby_lang.rs  rust_lang.rs  schema.rs  search.rs  server.rs  symbol.rs  watcher.rs  web.rs  zig_lang.rs
tests/fixtures/bash_project/: main.sh
tests/fixtures/cpp_project/: CMakeLists.txt
tests/fixtures/csharp_project/: Greeter.cs
tests/fixtures/go_project/: go.mod  models.go  service.go
tests/fixtures/java_project/: pom.xml
tests/fixtures/java_project/jdt.ls-java-project/: .project
tests/fixtures/lua_project/: main.lua
tests/fixtures/python_project/: pyproject.toml
tests/fixtures/python_project/src/: models.py  service.py
tests/fixtures/ruby_project/: greeter.rb
tests/fixtures/rust_project/src/: main.rs  user.rs
tests/fixtures/typescript_project/: package.json  tsconfig.json
tests/fixtures/web_project/: index.html  styles.css
tests/support/: mod.rs
(+5 files in other folders)
