[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lsp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
regex = "1"
axum = "0.8.9"
hyper-util = { version = "0.1.20", features = ["server", "tokio", "http1"] }
tower = "0.5.3"
sha2 = "0.11.0"
chrono = "0.4.45"
walkdir = "2.5.0"
hyper = { version = "1.10.1", features = ["server", "http1"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "1"
notify = "6"

[dev-dependencies]
tempfile = "3"
